--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
+    <div class="menu-toggle" id="menu-toggle">&#9776;</div>
   </header>
 
   <section id="home" class="home">
