--- a/index.html
+++ b/index.html
@@ -120,6 +120,8 @@
       I'm currently open to job opportunities in web development, internships, or freelance projects. 
       If you think I’d be a good fit for your team or want to collaborate, feel free to reach out via the form below or connect with me on LinkedIn.
     </p>
+    <p>Email: mudasird678@gmail.com</p>
+    <p>Phone: 9682188620</p>
     <form>
       <input type="text" placeholder="Your Name" required />
       <input type="email" placeholder="Your Email" required />
