--- a/index.html
+++ b/index.html
@@ -64,10 +64,8 @@
       </div>
       <div class="edu-card">
         <h3>Online Courses & Certifications</h3>
-        <ul>
-          <li><strong>Full Stack Web Development</strong> – WSCube Tech</li>
-          <li>Java for Beginners – Udemy</li>
-        </ul>
+          <p><strong>Full Stack Web Development</strong> – WSCube Tech</p>
+          <p><strong>Java for Beginners</strong> – Udemy</p>
       </div>
     </div>
   </section>
@@ -120,8 +118,10 @@
       I'm currently open to job opportunities in web development, internships, or freelance projects. 
       If you think I’d be a good fit for your team or want to collaborate, feel free to reach out via the form below or connect with me on LinkedIn.
     </p>
-    <p>Email: mudasird678@gmail.com</p>
-    <p>Phone: 9682188620</p>
+    <b></b>
+    <strong><p>Email: mudasird678@gmail.com</p>
+    <p>Phone: 9682188620</p></strong>
+    
     <form>
       <input type="text" placeholder="Your Name" required />
       <input type="email" placeholder="Your Email" required />
